# plotter

./: .gitignore  CMakeLists.txt  Makefile  README.md  doc.md  main.cpp  plotter  plotter.cpp  plotter.hpp
cmake/: plotterConfig.cmake.in
fonts/: firacode.cpp  firacode.hpp  notosans.hpp
include/libplotter/: firacode.hpp  notosans.hpp  plotter.hpp
include/plotter/: firacode.hpp  notosans.hpp  plotter.hpp
src/: plotter.cpp
tests/: CMakeLists.txt  Makefile  main.cpp
